--- a/trunk/qiushibaike/res/layout/main.xml
+++ b/trunk/qiushibaike/res/layout/main.xml
@@ -5,9 +5,10 @@
 	<LinearLayout android:id="@+id/ll" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:orientation="vertical"
 		android:layout_below="@+id/refresh" android:layout_alignParentLeft="true">
-		<TextView android:id="@+id/tvAdd" android:layout_width="fill_parent"
+		<ListView android:id="@+id/lvAll" android:layout_width="fill_parent"
+			android:orientation="vertical" android:visibility="visible"
 			android:layout_height="wrap_content" android:text="TextView">
-		</TextView>
+		</ListView>
 	</LinearLayout>
 	<Button android:id="@+id/refresh" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:text="刷新"
