--- a/trunk/qiushibaike/res/layout/main.xml
+++ b/trunk/qiushibaike/res/layout/main.xml
@@ -7,7 +7,8 @@
 		android:layout_below="@+id/refresh" android:layout_alignParentLeft="true">
 		<ListView android:id="@+id/lvAll" android:layout_width="fill_parent"
 			android:orientation="vertical" android:visibility="visible"
-			android:layout_height="wrap_content" android:text="TextView">
+			android:layout_height="wrap_content" android:text=""
+			android:divider="#FFFFFF" android:dividerHeight="1px">
 		</ListView>
 	</LinearLayout>
 </RelativeLayout>
