--- a/trunk/qiushibaike/res/layout/qblist.xml
+++ b/trunk/qiushibaike/res/layout/qblist.xml
@@ -3,17 +3,17 @@
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView android:id="@+id/tvAuthor" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="TextView"
+		android:layout_height="wrap_content" android:text=""
 		android:gravity="left" android:layout_below="@+id/tvPubDate"
 		android:layout_alignParentLeft="true">
 	</TextView>
 	<TextView android:id="@+id/tvPubDate" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="TextView"
+		android:layout_height="wrap_content" android:text=""
 		android:gravity="left" android:layout_below="@+id/tvTitle"
 		android:layout_alignParentLeft="true">
 	</TextView>
 	<TextView android:id="@+id/tvTitle" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="TextView"
+		android:layout_height="wrap_content" android:text=""
 		android:gravity="left" android:layout_alignParentTop="true"
 		android:layout_alignParentLeft="true">
 	</TextView>
