--- a/trunk/qiushibaike/res/layout/main.xml
+++ b/trunk/qiushibaike/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/widget28"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/surface"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<LinearLayout android:id="@+id/ll" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:orientation="vertical"
