--- a/trunk/qiushibaike/res/layout/addfeed.xml
+++ b/trunk/qiushibaike/res/layout/addfeed.xml
@@ -14,21 +14,21 @@
 	</Button>
 	<AutoCompleteTextView android:id="@+id/etUrl"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:text="AutoComplete" android:textSize="18sp" android:gravity="left"
+		android:text="" android:textSize="18sp" android:gravity="left"
 		android:layout_below="@+id/tvUrl" android:layout_alignParentLeft="true">
 	</AutoCompleteTextView>
 	<TextView android:id="@+id/tvUrl" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="TextView"
+		android:layout_height="wrap_content" android:text=""
 		android:textSize="20sp" android:gravity="left" android:layout_below="@+id/etName"
 		android:layout_alignParentLeft="true">
 	</TextView>
 	<EditText android:id="@+id/etName" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="EditText"
+		android:layout_height="wrap_content" android:text=""
 		android:textSize="18sp" android:gravity="left" android:layout_below="@+id/tvTitle"
 		android:layout_alignParentLeft="true">
 	</EditText>
 	<TextView android:id="@+id/tvTitle" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="TextView"
+		android:layout_height="wrap_content" android:text=""
 		android:textSize="20sp" android:layout_alignParentTop="true"
 		android:layout_alignParentLeft="true">
 	</TextView>
