--- a/trunk/HighJump/res/layout/main.xml
+++ b/trunk/HighJump/res/layout/main.xml
@@ -4,21 +4,17 @@
 	android:layout_height="fill_parent">
 	<RelativeLayout android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
-		<com.highjump.view.BackGroundView
+		<com.highjump.view.LoginView
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_weight="1" />
-<!-- 		<Button android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true" android:text="Himi Button_1"
-			android:id="@+id/button1" />
-
-		<Button android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true" android:layout_toRightOf="@id/button1"
-			android:text="Himi Button_2" android:id="@+id/button2" />
-		<TextView android:id="@+id/textview" android:layout_width="fill_parent"
-			android:layout_height="fill_parent" android:text="This is Himi"
-			android:textSize="32sp" android:textColor="#00FF00" android:gravity="center_horizontal" /> -->
-
+		<Button android:id="@+id/btnStart" android:layout_width="200px"
+			android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+			android:layout_marginTop="50px" android:text="Start" />
+		<Button android:id="@+id/btnRecord" android:layout_width="200px"
+			android:layout_height="wrap_content" android:layout_below="@+id/btnStart"
+			android:layout_alignLeft="@+id/btnStart" android:text="Record" />
+		<Button android:id="@+id/btnExit" android:layout_width="200px"
+			android:layout_height="wrap_content" android:layout_below="@+id/btnRecord"
+			android:layout_alignLeft="@+id/btnRecord" android:text="Exit" />
 	</RelativeLayout>
 </LinearLayout>
