--- a/trunk/ComicReader/res/layout/main.xml
+++ b/trunk/ComicReader/res/layout/main.xml
@@ -7,6 +7,8 @@
 <TextView  
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
-    android:text="@string/hello"
+    android:id="@+id/tv"
     />
+<Button android:id="@+id/btnStart" android:text="Start" android:layout_width="wrap_content" android:layout_height="wrap_content" />
+<Button android:id="@+id/btnStop" android:text="Stop" android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </LinearLayout>
