--- a/SinaWeiboTest/res/layout/main.xml
+++ b/SinaWeiboTest/res/layout/main.xml
@@ -5,22 +5,25 @@
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="horizontal" android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
-		<TextView android:text="@string/username" android:id="@+id/tvUser" android:layout_width="50dip"
-			android:layout_height="wrap_content"></TextView>
-		<EditText android:text="EditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/etUsername"></EditText>
+		<TextView android:text="@string/username" android:id="@+id/tvUser"
+			android:layout_width="50dip" android:layout_height="wrap_content"></TextView>
+		<EditText android:text="EditText" android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:id="@+id/etUsername"></EditText>
 	</LinearLayout>
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="horizontal" android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 		<TextView android:text="@string/passwd" android:id="@+id/tvPasswd"
 			android:layout_width="50dip" android:layout_height="wrap_content"></TextView>
-				<EditText android:layout_width="fill_parent" 
+		<EditText android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:id="@+id/etPasswd" />
 	</LinearLayout>
-	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
-		<Button android:id="@+id/btnLogin" android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:text="@string/login"/>
-		<Button android:id="@+id/btnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:text="@string/cancel" android:layout_toRightOf="@+id/btnLogin"/>
+	<RelativeLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		<Button android:id="@+id/btnLogin" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:text="@string/login" />
+		<Button android:id="@+id/btnCancel" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:text="@string/cancel"
+			android:layout_toRightOf="@+id/btnLogin" />
 	</RelativeLayout>
 </LinearLayout>
