--- a/trunk/SinaWeiboTest/res/layout/index_activity.xml
+++ b/trunk/SinaWeiboTest/res/layout/index_activity.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
+	<!--
+		<HorizontalScrollView android:layout_width="wrap_content"
+		android:id="@+id/hsTopMenu" android:scrollbars="none"
+		android:layout_height="wrap_content"> <TableLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"> <TableRow
+		android:id="@+id/trMenu" android:layout_width="fill_parent"
+		android:layout_height="wrap_content"></TableRow> </TableLayout>
+		</HorizontalScrollView>
+	-->
+	<ListView android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/lvTopMenu" />
 	<ListView android:layout_width="fill_parent" android:id="@+id/lvpublicTimeLine"
-		android:layout_height="fill_parent"></ListView>
+		android:layout_height="wrap_content"></ListView>
 </LinearLayout>
