--- a/SinaWeiboTest/res/layout/main.xml
+++ b/SinaWeiboTest/res/layout/main.xml
@@ -1,29 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="horizontal" android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView android:text="@string/username" android:id="@+id/tvUser"
-			android:layout_width="50dip" android:layout_height="wrap_content"></TextView>
-		<EditText android:text="EditText" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:id="@+id/etUsername"></EditText>
+
+<RelativeLayout android:id="@+id/relativeLayout1"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android">
+	<LinearLayout android:layout_width="wrap_content" android:layout_centerVertical="true"
+		android:layout_centerInParent="true" android:layout_height="wrap_content">
+		<Button android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:text="@string/login"
+			android:id="@+id/btnLogin"></Button>
+		<Button android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:text="@string/cancel"
+			android:id="@+id/btnCancel" android:layout_toRightOf="@+id/btnLogin"
+			android:layout_alignTop="@+id/btnLogin" android:layout_alignBottom="@+id/btnLogin"></Button>
 	</LinearLayout>
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="horizontal" android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView android:text="@string/passwd" android:id="@+id/tvPasswd"
-			android:layout_width="50dip" android:layout_height="wrap_content"></TextView>
-		<EditText android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:id="@+id/etPasswd" />
-	</LinearLayout>
-	<RelativeLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<Button android:id="@+id/btnLogin" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/login" />
-		<Button android:id="@+id/btnCancel" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/cancel"
-			android:layout_toRightOf="@+id/btnLogin" />
-	</RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
