--- a/SinaWeiboTest/res/layout/index_activity.xml
+++ b/SinaWeiboTest/res/layout/index_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:orientation="vertical">
 	<HorizontalScrollView android:layout_width="fill_parent"
 		android:id="@+id/hsTopMenu" android:layout_height="wrap_content">
 		<TableLayout android:layout_width="fill_parent"
@@ -9,6 +10,38 @@
 				android:layout_width="fill_parent" />
 		</TableLayout>
 	</HorizontalScrollView>
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/belowTopMenu">
+		<RelativeLayout android:id="@+id/rlTimeLineHeader"
+			android:layout_width="fill_parent" android:layout_height="fill_parent">
+			<ImageView android:src="@drawable/icon"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:layout_alignParentLeft="true" android:id="@+id/ibtnHeaderWrite"></ImageView>
+			<ImageView android:src="@drawable/icon"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:layout_alignParentRight="true" android:id="@+id/ibtnHeaderRefresh"></ImageView>
+			<TextView android:text="" android:layout_alignParentTop="true"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:id="@+id/tvHeaderUserName" android:layout_centerInParent="true"></TextView>
+		</RelativeLayout>
+		<LinearLayout android:id="@+id/llEditTwitter"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:orientation="vertical" android:visibility="gone">
+			<EditText android:id="@+id/etBoradcast"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+				android:visibility="visible" />
+			<RelativeLayout android:id="@+id/rlBroadcastControl"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+				android:visibility="visible">
+				<TextView android:id="@+id/btnSend" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:text="@string/btnsend"
+					android:layout_alignParentLeft="true" android:visibility="visible" />
+				<TextView android:id="@+id/btnCancel" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:text="@string/btncancel"
+					android:layout_alignParentRight="true" android:visibility="visible" />
+			</RelativeLayout>
+		</LinearLayout>
+	</LinearLayout>
 	<ListView android:layout_width="fill_parent" android:id="@+id/lvHomeTimeLine"
-		android:layout_below="@+id/hsTopMenu" android:layout_height="wrap_content"></ListView>
-</RelativeLayout>
+		android:layout_height="wrap_content"></ListView>
+</LinearLayout>
