--- a/SinaWeiboTest/res/layout/friendstimeline_adapter.xml
+++ b/SinaWeiboTest/res/layout/friendstimeline_adapter.xml
@@ -2,40 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/rlFriendsTimeLine" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<RelativeLayout android:layout_width="fill_parent" android:id="@+id/top"
-		android:layout_height="wrap_content">
+	<RelativeLayout android:layout_width="fill_parent"
+		android:id="@+id/top" android:layout_height="wrap_content">
 		<ImageView android:src="@drawable/icon"
 			android:layout_alignParentLeft="true" android:id="@+id/ivUserHead"
 			android:layout_width="32px" android:layout_height="32px"></ImageView>
-		<TextView android:layout_width="wrap_content" android:text="TextView"
-			android:layout_toRightOf="@+id/ivUserHead" android:layout_height="wrap_content"
-			android:layout_alignTop="@+id/ivUserHead" android:id="@+id/tvUserName"></TextView>
-		<TextView android:text="TextView" android:layout_below="@+id/tvUserName"
-			android:layout_height="wrap_content" android:layout_alignLeft="@+id/tvUserName"
-			android:id="@+id/tvUserDesc" android:layout_width="fill_parent"></TextView>
-		<TextView android:layout_width="wrap_content" android:text="TextView"
-			android:layout_below="@+id/tvUserDesc" android:layout_height="wrap_content"
-			android:layout_alignLeft="@+id/tvUserDesc" android:id="@+id/tvStatus"></TextView>
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
+			android:text="TextView" android:layout_toRightOf="@+id/ivUserHead"
+			android:layout_height="wrap_content" android:layout_alignTop="@+id/ivUserHead"
+			android:id="@+id/tvUserName"></TextView>
+		<TextView style="@style/TextView" android:text="TextView"
+			android:layout_below="@+id/tvUserName" android:layout_height="wrap_content"
+			android:layout_alignLeft="@+id/tvUserName" android:id="@+id/tvUserDesc"
+			android:layout_width="fill_parent"></TextView>
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
+			android:text="TextView" android:layout_below="@+id/tvUserDesc"
+			android:layout_height="wrap_content" android:layout_alignLeft="@+id/tvUserDesc"
+			android:id="@+id/tvStatus"></TextView>
 		<ImageView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:src="@drawable/icon"
 			android:layout_below="@+id/tvStatus" android:layout_alignLeft="@+id/tvStatus"
 			android:id="@+id/ivThumbail"></ImageView>
-		<TextView android:layout_width="wrap_content" android:text="TextView"
-			android:layout_height="wrap_content" android:layout_alignParentRight="true"
-			android:id="@+id/tvUserLocation"></TextView>
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
+			android:text="TextView" android:layout_height="wrap_content"
+			android:layout_alignParentRight="true" android:id="@+id/tvUserLocation"></TextView>
 	</RelativeLayout>
-	<RelativeLayout android:layout_width="fill_parent" android:layout_below="@+id/top"
-		android:layout_height="wrap_content">
-		<TextView android:layout_width="wrap_content"
+	<RelativeLayout android:layout_width="fill_parent"
+		android:layout_below="@+id/top" android:layout_height="wrap_content">
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/tvTimeCreate"
 			android:layout_alignParentLeft="true" />
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:id="@+id/tvSource" android:autoLink="web"
-			android:layout_toRightOf="@+id/tvTimeCreate" />
-		<TextView android:layout_width="wrap_content"
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:id="@+id/tvSource"
+			android:autoLink="web" android:layout_toRightOf="@+id/tvTimeCreate" />
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/tvRewardBy"
 			android:layout_toLeftOf="@+id/tvCommentBy" />
-		<TextView android:layout_width="wrap_content"
+		<TextView style="@style/TextView" android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/tvCommentBy"
 			android:layout_alignParentRight="true" />
 	</RelativeLayout>
